--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
     <!-- copyright -->
 						<div class="copyright text-center">
 							<img src="img/logo-meghna.png" alt="Meghna" /> <br />
-							<p>超威半导体 rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+							<p><a target="_blank" href="http://sc.chinaz.com/moban/">超威半导体 rights reserved.</a></p>
 						</div>
 						<!-- /copyright -->
 
