--- a/home.html
+++ b/home.html
@@ -45,17 +45,16 @@
     <div class="jumbotron">
       <div class="container">
         
-        <h1>这里是 songshare</h1>
+        <h1>店面装修中...</h1>
         <p>敬请期待</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a><i class="icon-music"></i></p>
+        <p><a class="btn btn-primary btn-lg" href="https://github.com/microhz" role="button">点击跳转到作者Github</a><i class="icon-music"></i></p>
       </div>
     </div>
     <!-- copyright -->
-						<div class="copyright text-center">
-							<img src="img/logo-meghna.png" alt="Meghna" /> <br />
-							<p><a target="_blank" href="http://sc.chinaz.com/moban/">超威半导体 rights reserved.</a></p>
-						</div>
-						<!-- /copyright -->
+    <div class="copyright text-center">
+      <p><a target="_blank" href="http://sc.chinaz.com/moban/">超威半导体 rights reserved.</a></p>
+    </div>
+    <!-- /copyright -->
 
 </body>
 </html>
