--- a/home.html
+++ b/home.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="css/font-awesome.min.css">
 		<!-- bootstrap.min css -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <!-- bootstrap css -->
+        <link rel="stylesheet" href="css/bootstrap.css">
 		<!-- Animate.css -->
         <link rel="stylesheet" href="css/animate.css">
 		<!-- Owl Carousel -->
@@ -22,12 +24,15 @@
         <link rel="stylesheet" href="css/main.css">
 		<!-- Media Queries -->
         <link rel="stylesheet" href="css/responsive.css">
+        
 		
 
     <title>欢迎</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- custome -->
+    <link rel="stylesheet" href="css/custom/home.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!-- <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
@@ -41,7 +46,6 @@
     <![endif]-->
   </head>
 <body>
-
     <div class="jumbotron">
       <div class="container">
         
