--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
     </div>
     <!-- copyright -->
     <div class="copyright text-center">
-      <p><a target="_blank" href="http://sc.chinaz.com/moban/">超威半导体 rights reserved.</a></p>
+      <p><a target="_blank" href="http://sc.chinaz.com/moban/">micro rights reserved. 2017</a></p>
     </div>
     <!-- /copyright -->
 
